finished the project alxamdullilah

--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -93,6 +93,9 @@
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminCustomerContacts' user_var glblslug %}">Contacts</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDebugging' %}">Debugging</a></li>
     
+ <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:add_sector_page' %}">Data Auto Save</a></li>
+    
+
     </div>
     </ul>
   </div>
