--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/assessments/add-assessment.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/assessments/add-assessment.html
@@ -1,40 +1,59 @@
 {% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
 {% load allif_navigation_tags %}
  {% block add-form-header-block %}
-  <a href="{% allif_get_single_nav_link_url 'Assets' user_var glblslug %}">Assets</a>
-  <a href="{% allif_get_single_nav_link_url 'AddAsset' user_var glblslug %}">Add Asset</a>
+  <a href="{% allif_get_single_nav_link_url 'MedicalAssessments' user_var glblslug %}">Assessments</a>
+ 
   {% endblock %}
-   {% block core-tab-col-one %}
-   
+  {% block details-table-col-one %}
+   <tr>
+    <td class="allif-fix-table-col">Patient</td>
+    <td>{{allifquery.medical_file.customer}}</td>
+  </tr>
+  {%endblock%}
+   {% block details-table-col-two %}
     <tr>
-      <td class="allif-fix-table-col-forms">Category</td>
-      <td>{{form.category}}</td>
-    </tr>
-
+    <td class="allif-fix-table-col">File UID</td>
+    <td>{{allifquery.medical_file.number}}</td>
+  </tr>
+  {%endblock%}
+   {% block core-tab-col-one %}
+    
      <tr>
-      <td class="allif-fix-table-col-forms">Staff in charge</td>
-      <td>{{form.employee_in_charge}}</td>
+      <td class="allif-fix-table-col-forms">Systolic Pressure</td>
+      <td>{{form.blood_pressure_systolic}}</td>
     </tr>
-
-     <tr>
-      <td class="allif-fix-table-col-forms">Asset A/C</td>
-      <td>{{form.asset_account}}</td>
+    
+      <tr>
+      <td class="allif-fix-table-col-forms">Diastolic Pressure</td>
+      <td>{{form.blood_pressure_diastolic}}</td>
     </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Payment A/C</td>
-      <td>{{form.cost_account}}</td>
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Temperature</td>
+      <td>{{form.temperature}}</td>
     </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Supplier</td>
-      <td>{{form.supplier}}</td>
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Respiration Rate</td>
+      <td>{{form.respiration_rate}}</td>
     </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Asset Status</td>
-      <td>{{form.asset_status}}</td>
+   
+      <tr>
+      <td class="allif-fix-table-col-forms">Oxygen Saturation</td>
+      <td>{{form.oxygen_saturation}}</td>
     </tr>
     {%endblock%}
 
     {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Complaints</td>
+      <td>{{form.complaints}}</td>
+    </tr>
+     
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+    
      <tr>
       <td class="allif-fix-table-col-forms">Name</td>
       <td>{{form.name}}</td>
@@ -48,122 +67,79 @@
       <td class="allif-fix-table-col-forms">Quantity</td>
       <td>{{form.quantity}}</td>
     </tr>
+    
      <tr>
-      <td class="allif-fix-table-col-forms">Value</td>
-      <td>{{form.value}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Deposit</td>
-      <td>{{form.deposit}}</td>
+      <td class="allif-fix-table-col-forms">Pulse Rate</td>
+      <td>{{form.pulse_rate}}</td>
     </tr>
     
-    {%endblock%}
-
-     {% block standard-tab-col-one %}
-      <tr>
-      <td class="allif-fix-table-col-forms">Salvage Value</td>
-      <td>{{form.salvage_value}}</td>
-    </tr>
+  
      <tr>
-      <td class="allif-fix-table-col-forms">Life Span</td>
-      <td>{{form.lifespan}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Terms</td>
-      <td>{{form.terms}}</td>
-    </tr>
-   
-      <tr>
-      <td class="allif-fix-table-col-forms">Acquired On</td>
-      <td>{{form.acquired}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Depreciation</td>
-      <td>{{form.depreciation}}</td>
+      <td class="allif-fix-table-col-forms">Medical History</td>
+      <td>{{form.past_medical_history}}</td>
     </tr>
 
      <tr>
-      <td class="allif-fix-table-col-forms">Expires</td>
-      <td>{{form.expires}}</td>
+      <td class="allif-fix-table-col-forms">Current Medication</td>
+      <td>{{form.current_medication}}</td>
     </tr>
 
-     <tr>
-      <td class="allif-fix-table-col-forms">Maker Name</td>
-      <td>{{form.maker_name}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Asset Model</td>
-      <td>{{form.equipment_model}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Manufactured Year</td>
-      <td>{{form.manufactured_year}}</td>
-    </tr>
-    
     
     {%endblock%}
        
    {% block standard-tab-col-two %}
   
     <tr>
-      <td class="allif-fix-table-col-forms">Starting Odometer</td>
-      <td>{{form.starting_odometer}}</td>
+      <td class="allif-fix-table-col-forms">Treatment Plan</td>
+      <td>{{form.treatment_plan}}</td>
     </tr>
      <tr>
-      <td class="allif-fix-table-col-forms">Primary Meter</td>
-      <td>{{form.primary_meter}}</td>
+      <td class="allif-fix-table-col-forms">Any Conditions</td>
+      <td>{{form.known_chronic_conditions}}</td>
     </tr>
+   
      <tr>
-      <td class="allif-fix-table-col-forms">Oil Type</td>
-      <td>{{form.oil_type}}</td>
+      <td class="allif-fix-table-col-forms">Staff</td>
+      <td>{{form.staff}}</td>
     </tr>
+
      <tr>
-      <td class="allif-fix-table-col-forms">Oil Capacity</td>
-      <td>{{form.oil_capacity}}</td>
+      <td class="allif-fix-table-col-forms">Date</td>
+      <td>{{form.record_date}}</td>
     </tr>
+
      <tr>
       <td class="allif-fix-table-col-forms">Balance</td>
       <td>{{form.balance}}</td>
     </tr>
     
-  
-     <tr>
-      <td class="allif-fix-table-col-forms">Energy Usage</td>
-      <td>{{form.energy_usage}}</td>
-    </tr>
-
-     <tr>
-      <td class="allif-fix-table-col-forms">Plate Number</td>
-      <td>{{form.plate_number}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Weight KGs</td>
-      <td>{{form.capacity_kg}}</td>
-    </tr>
-     <tr>
-      <td class="allif-fix-table-col-forms">Service Date</td>
-      <td>{{form.last_service_date}}</td>
-    </tr>
-
-    <tr>
-      <td class="allif-fix-table-col-forms">Next Service On</td>
-      <td>{{form.next_service_due}}</td>
-    </tr>
-    
-   
     {%endblock%}
 
 
   {% block allif_sensitive_section_col_one %}
     <tr>
       <td class="allif-fix-table-col"> {{allifquery}}</td>
-      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Assets' user_var glblslug %}">Go Back</a></td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'MedicalAssessments' user_var glblslug %}">Go Back</a></td>
     </tr>
   {% endblock %}
   {% block allif_sensitive_section_col_two %}
     <tr>
       <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteAssetConfirm.url }}">Delete {{allifquery}}</a></td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteAssessmentConfirm.url }}">Delete {{allifquery}}</a></td>
     </tr>
     {% endblock %}
+  {% block bottom-fields-col-one %}
+  
+     <tr>
+      <td class="allif-fix-table-col-forms">Weight</td>
+      <td>{{form.weight}}</td>
+    </tr>
+  {%endblock%}
+  {% block bottom-fields-col-two %}
+  
+     <tr>
+      <td class="allif-fix-table-col-forms">Height</td>
+      <td>{{form.height}}</td>
+    </tr>
+  {%endblock%}
 
