--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/prescriptions/treatments/add_treatment.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/prescriptions/treatments/add_treatment.html
@@ -1,286 +1,73 @@
-{% extends 'allifmaalshaafiapp/base/uimainbase/shaafibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+
+ {% block add-form-header-block %}
+ <a href="{% allif_get_single_nav_link_url 'Transactions' user_var glblslug %}">Transactions</a>
+  <a href="{% allif_get_single_nav_link_url 'triagedata' user_var glblslug %}">Triage</a>
+  <a href="{% allif_get_single_nav_link_url 'MedicalAssessments' user_var glblslug %}">Assessments</a>
+  <a href="{% allif_get_single_nav_link_url 'LabTests' user_var glblslug %}">Lab Tests</a>
+  <a href="{% allif_get_single_nav_link_url 'LabResults' user_var glblslug %}">Results</a>
+  <a href="{% allif_get_single_nav_link_url 'prescriptions' user_var glblslug %}">Prescriptions</a>
+ 
 {% endblock %}
-{% block style %}
+{% block details-table-col-one %}
+ <tr>
+    <td class="allif-fix-table-col">Customer</td>
+    <td>{{allifquery.medical_file.customer}}</td>
+  </tr>
+
 {%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a class="amel-table-list-identifier">Add New Prescriptions:</a>
-
-  <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
-
-</div>
-
-    </div><!--end....header column-->
+{% block details-table-col-two %}
+ <tr>
+    <td class="allif-fix-table-col">Test For </td>
+    <td>{{allifquery.items}}</td>
+  </tr>
+{%endblock%}
+   {% block core-tab-col-one %}
   
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-{% if allifquery_update %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit {{allifquery}} Warehouse Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
+    <tr>
+      <td class="allif-fix-table-col-forms">Results</td>
+      <td>{{form.name}}</td>
+    </tr>
+     <tr>
+        <td class="allif-fix-table-col-forms">Description</td>
+        <td>{{form.description}}</td>
+      </tr>
     
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+    {%endblock%}
 
+    {% block core-tab-col-two %}
+    
       <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-        <tr>
-          <td class="allif-fix-table-col">Patient</td>
-          <td>{{form.medical_file}}</td>
-      
-          </tr>
- 
-        <tr>
-            <td class="allif-fix-table-col">Medication</td>
-            <td>{{form.prescription}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Dosage Value</td>
-            <td>{{form.dosage_value}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Dosage Unit</td>
-            <td>{{form.dosage_unit}}</td>
-        
-            </tr>
-          
-           
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Given On</td>
-            <td>{{form.given_on}}</td>
-        
-            </tr>
-        <tr>
-            <td class="allif-fix-table-col">Via</td>
-            <td>{{form.via}}</td>
-        
-            </tr>
-           
-            </tr>
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-             <tr>
-            <td class="allif-fix-table-col">Given By</td>
-            <td>{{form.administered_by_nurse}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-           
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
+        <td class="allif-fix-table-col-forms">Dosage Value</td>
+        <td>{{form.dosage_value}}</td>
+      </tr>
+     
+      <tr>
+        <td class="allif-fix-table-col-forms">Dosage Unit</td>
+        <td>{{form.dosage_unit}}</td>
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col-forms">Given On</td>
+        <td>{{form.given_on}}</td>
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col-forms">Via</td>
+        <td>{{form.via}}</td>
+      </tr>
 
-</div><!--end....table row-->
-</div>
+    {%endblock%}
 
-<div class="error-body">
-  <p>{{error_message}}</p>
-  </div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% else %}
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Medication</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-  
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-        <tr>
-          <td class="allif-fix-table-col">Patient</td>
-          <td>{{form.medical_file}}</td>
-      
-          </tr>
- 
-        <tr>
-            <td class="allif-fix-table-col">Medication</td>
-            <td>{{form.prescription}}</td>
-        
-            </tr>
-          
-             <tr>
-            <td class="allif-fix-table-col">Dosage Value</td>
-            <td>{{form.dosage_value}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Dosage Unit</td>
-            <td>{{form.dosage_unit}}</td>
-        
-            </tr>
-          
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Given On</td>
-            <td>{{form.given_on}}</td>
-        
-            </tr>
-        <tr>
-            <td class="allif-fix-table-col">Via</td>
-            <td>{{form.via}}</td>
-        
-            </tr>
-           
-            </tr>
-           
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-       
-             <tr>
-            <td class="allif-fix-table-col">Given By</td>
-            <td>{{form.administered_by_nurse}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-           
-          
-        <tr>
-          <td class="allif-fix-table-col">Action</td>
-          <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-      
-          </tr>
-      </tbody>
-      </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-
-<div class="error-body">
-  <p>{{error_message}}</p>
-  </div>
-</form>
-<!--end of table-->
-
-
-
-</div><!--end of main container of the page....-->
-
-{% endif %}
-
-
-</div>
-
-</div>
-  {% block scripts %}
-
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Treatments' user_var glblslug %}">Go Back</a></td>
+    </tr>
   {% endblock %}
-   {% endblock %}
-   
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteTreatmentConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
